--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
       "path": "node_modules/cz-customizable"
     },
     "cz-customizable": {
-      "config": "cz-config.js"
+      "config": "cz-config.ts"
     }
   }
 }
