--- a/package.json
+++ b/package.json
@@ -2,10 +2,39 @@
   "name": "special-ui",
   "version": "1.0.0",
   "description": "",
+  "private": false,
   "type": "module",
-  "main": "index.js",
+  "main": "./lib/oop-ui.umd.js",
+  "module": "./lib/oop-ui.es.js",
+  "types": "./lib/oop-ui/index.d.ts",
+  "files": [
+    "./lib",
+    "package.json",
+    "README.md"
+  ],
+  "exports": {
+    ".": {
+      "require": "./lib/oop-ui.umd.js",
+      "import": "./lib/oop-ui.es.js"
+    }
+  },
   "scripts": {
-    "commit": "git-cz"
+    "dev:dev": "pnpm run -C example dev:dev",
+    "dev:uat": "pnpm run -C example dev:uat",
+    "dev:prod": "pnpm run -C example dev:prod",
+    "build:dev": "pnpm run -C example build:dev",
+    "build:uat": "pnpm run -C example build:uat",
+    "build:prod": "pnpm run -C example build:prod",
+    "preview:example": "pnpm run -C example preview",
+    "build:lib": "pnpm run -C packages/yyg-admin-ui build",
+    "docs:dev": "pnpm run -C docs dev",
+    "docs:build": "pnpm run -C docs build",
+    "docs:preview": "pnpm run -C docs serve",
+    "gen:component": "pnpm run -C cli gen",
+    "lint": "eslint \"{cli,packages,docs,example}/**/*.{js,ts,vue,jsx,tsx}\" --fix",
+    "commit": "git-cz",
+    "start:verdaccio": "pnpm verdaccio",
+    "pub:local": "pnpm publish --registry http://localhost:4873/"
   },
   "keywords": [],
   "author": "",
@@ -36,6 +65,7 @@
     "eslint-plugin-vue": "^9.18.0",
     "sass": "^1.69.4",
     "typescript": "^5.2.2",
+    "verdaccio": "^5.27.0",
     "vite": "^4.5.0",
     "vite-plugin-eslint": "^1.8.1",
     "vue-tsc": "^1.8.20"
