--- a/packages/oop-ui/package.json
+++ b/packages/oop-ui/package.json
@@ -4,12 +4,16 @@
   "description": "组件库入口",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rimraf ../../lib && vue-tsc --noEmit && vite build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@oop-ui/foo": "workspace:^"
+  },
+  "devDependencies": {
+    "rimraf": "^5.0.5",
+    "vite-plugin-dts": "^3.6.1"
   }
 }
